...
    // Park rating filter :
    Text(
        text =
            context.getString(
                R.string.rating_filter_title, userFilterInput.minRating.value.toString()),
        fontSize = Type.bodyLarge.fontSize,
        modifier = Modifier.testTag("ratingFilterTitle"))
    InteractiveRatingComponent(userFilterInput.minRating)

    HorizontalDivider()

    // Event quantity filter :
    Text(
        context.getString(R.string.eventDensity_filter_title),
        fontSize = Type.bodyLarge.fontSize,
        modifier = Modifier.testTag("eventDensityFilterTitle"))

    Row(modifier = Modifier.align(Alignment.CenterHorizontally).fillMaxWidth(0.825f)) {
      FilterChip(
          selected = userFilterInput.eventDensity.contains(EventDensity.LOW),
          onClick = { userFilterInput.updateDensity(EventDensity.LOW) },
          label = { Text("[ 0 .. 2 ]") },
          colors = filterChipColors,
          modifier = Modifier.padding(end = 2.dp).testTag("lowDensityFilterChip"))

      FilterChip(
          selected = userFilterInput.eventDensity.contains(EventDensity.MEDIUM),
          onClick = { userFilterInput.updateDensity(EventDensity.MEDIUM) },
          label = { Text("[ 3 .. 6 ]") },
          colors = filterChipColors,
          modifier = Modifier.padding(end = 2.dp).testTag("mediumDensityFilterChip"))

      FilterChip(
          selected = userFilterInput.eventDensity.contains(EventDensity.HIGH),
          onClick = { userFilterInput.updateDensity(EventDensity.HIGH) },
          label = { Text("[7 + ]") },
          colors = filterChipColors,
          modifier = Modifier.padding(end = 2.dp).testTag("highDensityFilterChip"))
    }

    HorizontalDivider()

    Button(
        onClick = { userFilterInput.reset() },
        colors = ColorPalette.BUTTON_COLOR,
        modifier =
            Modifier.align(Alignment.CenterHorizontally)
                .padding(top = 4.dp)
                .testTag("resetButton")) {
          Text(context.getString(R.string.reset_button))
        }
  }
}

@OptIn(ExperimentalMaterial3Api::class)
...
