...
 */
@Composable
fun RatingComponent(rating: Int, nbrReview: Int) {
  Log.d("ParkOverview", "RatingComponent: rating=$rating ; nbrReview=$nbrReview")
  require(rating in 1..5) { "Rating must be between 1 and 5" }
  Row(
      modifier = Modifier.padding(start = 16.dp).testTag("ratingComponent"),
      verticalAlignment = Alignment.CenterVertically) {
        for (i in 1..5) {
          Icon(
              imageVector = Icons.Default.Star,
              contentDescription = "Star",
              tint = if (i <= rating) ColorPalette.INTERACTION_COLOR_DARK else Color.Gray,
...
